--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   english_words: ^3.1.5
+  http: ^0.12.0+4
+  json_annotation: ^0.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  json_serializable: ^0.5.4
 
 
 # For information on the generic Dart part of this file, see the
